Fix navbar collapse on link click

--- a/src/style.css
+++ b/src/style.css
@@ -860,7 +860,22 @@ a {
 .achievement-page {
   padding: 100px 50px;
 }
+.achieve-discription{
+  color: white !important;
+    padding: 50px 20px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 900px;
+    width: 45%;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.75);
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
+    border-radius: 1rem;
+    /* padding: 1.5rem; */
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 
+}
 .achievement-section {
   margin-top: 50px;
 }
